# agent-work-console

./: .gitignore  README.md  capacitor.config.json  index.html  package-lock.json  package.json
android/app/: build.gradle
android/app/src/main/java/dev/jhc/agentworkconsole/: MainActivity.java
android/app/src/main/res/values/: strings.xml
docs/: implementation-plan.md  mobile-capacitor-spike.md  platform-app-plan.md  windows-tauri-spike.md
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
public/: manifest.webmanifest
scripts/: build.mjs  dev-server.mjs
src/: main.mjs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/domain/: messageHistory.mjs  sessionRefresh.mjs  statuses.mjs  workspaces.mjs
src/mocks/: mockData.mjs
src/services/: hermesApi.mjs
src/ui/: renderApp.mjs
tests/: devServer.test.mjs  hermesApi.test.mjs  keyboardShortcuts.test.mjs  messageHistory.test.mjs  mobileConfig.test.mjs  panelResize.test.mjs  platformConfig.test.mjs  renderApp.test.mjs  sessionRefresh.test.mjs  statuses.test.mjs  taskUtils.test.mjs  workspaces.test.mjs
